fixed overflow

--- a/src/profile/about.scss
+++ b/src/profile/about.scss
@@ -6,6 +6,10 @@ ul {
 .straw-img {
   background: url('~@/assets/straw.png');
 }
+img {
+  padding: 0;
+  margin: 0;
+}
 
 .about {
   &__header-info {
@@ -168,6 +172,7 @@ ul {
     padding-bottom: 70px;
     @media (max-width: 800px) {
       padding-left: 0;
+      margin-top: 50px;
     }
   }
   &__fact-body {
