--- a/src/profile/contacts.scss
+++ b/src/profile/contacts.scss
@@ -11,6 +11,9 @@
     justify-content: space-around;
     color: white;
     align-items: center;
+    @media (max-width: 430px) {
+      padding: 5px;
+    }
   }
   &__header-uptitle {
     font-size: $small-font;
