--- a/src/profile/header.scss
+++ b/src/profile/header.scss
@@ -2,7 +2,8 @@
 * {
   font-family: 'Noto Sans KR', sans-serif;
 }
-html {
+html,
+body {
   background-color: #f4f9e2;
   overflow-x: hidden;
 }
@@ -51,6 +52,7 @@ li {
     justify-content: center;
     width: 150px;
     font-size: $small-font;
+    z-index: 6;
     @media (max-width: 650px) {
       height: 40px;
     }
@@ -129,6 +131,7 @@ li {
   }
   &__img {
     display: flex;
+    z-index: 10;
     @media (max-width: 760px) {
       display: flex;
       justify-content: end;
@@ -140,6 +143,24 @@ li {
       }
       @media (max-width: 370px) {
         width: 100%;
+      }
+    }
+  }
+  &__img--empty {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 650px;
+    z-index: 5;
+    img {
+      @media (max-width: 1100px) {
+        width: 400px;
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+      @media (max-width: 850px) {
+        display: none;
       }
     }
   }
